XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -48,13 +48,13 @@
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
                     <a href="../index.html" class="nav-link">
-                        <i class="fa-solid fa-regular fa-house"></i>
+                        <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="../about.html" class="nav-link">
-                        <i class="fa-solid fa-regular fa-circle-user"></i>
+                        <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
@@ -76,11 +76,9 @@
                         <span>Blog</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-item">
-                        <button class="wbnrfz_btn_theme" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-                            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-                        </button>
+                <li class="nav-item-toggle">
+                    <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+                        <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
                     </a>
                 </li>
             </ul>
@@ -153,7 +151,6 @@
         </ul>
     </div>
 
-
     <!-- Scroll Indicator -->
     <div id="scroll-indicator-container">
         <div id="scroll-indicator"></div>
@@ -163,8 +160,7 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Cover Header -->
-    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 68vh;">
+    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img-2">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -189,9 +185,6 @@
                                 <li class="breadcrumb-item">
                                     <a href="eicw.html">EICW</a>
                                 </li>
-                                <!-- <li class="breadcrumb-item active" aria-current="page">
-                                    EICW
-                                </li> -->
                             </ol>
                         </nav>
                         <div class="page-title-wrapper">
@@ -287,7 +280,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ci-img"
@@ -678,7 +670,6 @@
         </div>
     </section>
 
-
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="dsb-img"
         style="background-image: url(img/eia-light.png)">
@@ -881,7 +872,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ioi-img"
@@ -1110,7 +1100,6 @@
         </div>
         </div>
     </section>
-
 
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ie-img"
@@ -1379,8 +1368,6 @@
     <script src="../js/pw.bundle.js"></script>
 
     <script src="../js/default-assets/active.js"></script>
-
-    <script src="../js/preloader.js"></script>
 
 </body>
 
