--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -38,166 +38,206 @@
 
 <body>
 
-  <!-- Preloader Section -->
-  <!-- <div id="preloader">
-    <div class="loader"></div>
-    <p id="preloader-text">Just a moment...</p>
-  </div> -->
+  <!-- Navigation Bar -->
+  <nav class="navbar-container">
+    <div class="navbar">
+      <!-- Logo -->
+      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+
+      <!-- Navigation Links -->
+      <ul class="navbar-nav" id="navbarNav">
+        <li class="nav-item">
+          <a href="../index.html" class="nav-link">
+            <i class="fa-solid fa-house"></i>
+            <span>Home</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="../about.html" class="nav-link">
+            <i class="fa-solid fa-circle-user"></i>
+            <span>About</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="../works-by-nrfz.html" class="nav-link">
+            <i class="fa-solid fa-pen-paintbrush"></i>
+            <span>Works By NRFZ</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link active">
+            <i class="fa-solid fa-map-location"></i>
+            <span>EICW</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="../blog.html" class="nav-link">
+            <i class="fa-solid fa-comment"></i>
+            <span>Blog</span>
+          </a>
+        </li>
+        <li class="nav-item-toggle">
+          <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
+          </a>
+        </li>
+      </ul>
+
+      <!-- Mobile Toggle -->
+      <button class="mobile-toggle" id="mobileToggle">
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </button>
+    </div>
+
+    </div>
+  </nav>
+
+  <!-- Mobile Menu Overlay -->
+  <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
+
+  <!-- Mobile Menu -->
+  <div class="mobile-menu" id="mobileMenu">
+    <div class="mobile-menu-header">
+      <a href="#" class="mobile-menu-brand">
+        <span class="brand-text">
+          <li class="mobile-menu-item mobile-theme-toggle">
+            <button class="wbnrfz_btn_theme mobile-theme-btn" id="dark-mode-toggle-mobile"
+              title="Toggle Dark/Light Mode!">
+              <i class="fa-solid fa-moon-stars" id="theme-icon-mobile"></i>
+            </button>
+          </li>
+        </span>
+      </a>
+      <button class="mobile-menu-close" id="mobileMenuClose">
+        <span>×</span>
+      </button>
+    </div>
+
+    <ul class="mobile-menu-nav">
+      <li class="mobile-menu-item">
+        <a href="../index.html" class="mobile-menu-link">
+          <i class="fa-solid fa-regular fa-house"></i>
+          <span>Home</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="../about.html" class="mobile-menu-link">
+          <i class="fa-solid fa-regular fa-circle-user"></i>
+          <span>About</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="../works-by-nrfz.html" class="mobile-menu-link">
+          <i class="fa-solid fa-pen-paintbrush"></i>
+          <span>Works By NRFZ</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="#" class="mobile-menu-link active">
+          <i class="fa-solid fa-map-location"></i>
+          <span>EICW</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="../blog.html" class="mobile-menu-link">
+          <i class="fa-solid fa-comment"></i>
+          <span>Blog</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- Scroll Indicator -->
   <div id="scroll-indicator-container">
     <div id="scroll-indicator"></div>
   </div>
 
-  <header>
-    <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-    <input type="checkbox" id="check" />
-    <label for="check" class="icons">
-      <i class="fa-solid fa-bars" id="menu-icon"></i>
-      <i class="fa-solid fa-xmark" id="close-icon"></i>
-    </label>
+  <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
-    <nav class="navbar navbar-mobile">
-      <a href="../index.html" class="nav-item">Home</a>
-      <a href="../about.html" class="nav-item">About</a>
-      <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-      <a href="eicw.html" class="nav-item active">EICW</a>
-      <a href="../blog.html" class="nav-item">Blog</a>
-      <a href="#" class="nav-item">
-        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
-          <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
-        </button>
-      </a>
-    </nav>
-  </header>
-
-  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-eicw-4.png); height: 85vh;">
-    <div class="wbnrfz_details_blog">
-      <div class="container">
-        <div class="portfolio-controls d-flex justify-content-between align-items-center">
-          <!-- Filter Buttons -->
-          <div class="portfolio-filter mt-3">
-            <div class="col-lg-12">
-              <div class="main-title">
-                <nav aria-label="breadcrumb">
-                  <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
-                        Home</a>
-                    </li>
-                    <li class="breadcrumb-item active"><a href="eicw.html">
-                        EICW
-                      </a>
-                    </li>
-                  </ol>
-                </nav>
-                <h1 class="brc">Rethinking CCL6 Signages</h1>
-              </div>
-            </div>
-          </div>
-          <!-- Collapsible Header -->
-          <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-            aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
-            <i class="fa-solid fa-chevron-down nav-chev"></i>
-          </div> -->
+  <!-- Cover Header -->
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="covccl-img">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
         </div>
-        <!-- Collapsible Content -->
       </div>
     </div>
   </section>
 
-  <!-- Section Content -->
+  <!-- Title/Breadcrumbs -->
   <section class="about-me-sum clearfix">
     <div class="wbnrfz_eicw">
-
-            <div class="scrollable-tabs-container">
-                <div class="left-arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                    </svg>
-
-                </div>
-
-                <ul>
-                    <li>
-                        <a href="eicw.html">Design System Introduction</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-4.html">Proposed UI/UX Changes</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-5.html" class="active">Rethinking CCL6 Signages</a>
-                    </li>
-                </ul>
-
-                <div class="right-arrow active">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                    </svg>
-
-                </div>
+      <div class="page-header-section">
+        <div class="container-xxl container-mobile container-mobile-header">
+          <div class="breadcrumb-wrapper">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                  <a href="../index.html">
+                    <i class="fa-solid fa-house"></i>
+                  </a>
+                </li>
+                <li class="breadcrumb-item">
+                  <a href="#">EICW</a>
+                </li>
+              </ol>
+            </nav>
+            <div class="page-title-wrapper">
+              <h1 class="page-title-single">Rethinking CCL6 Signages</h1>
+              <p class="page-subtitle">9 mins read</p>
             </div>
+          </div>
+        </div>
 
-      <div class="container container-mobile">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="row justify-content-center">
+        <div class="scrollable-tabs-container">
+          <div class="left-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+            </svg>
 
-              <!-- CCL6 -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="pcc">
-                <div class="info justify-content-center">
-                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Rethinking
-                    CCL6 Signages</h2>
-                  <p style="text-align: left;">LTA recently held a Public Engagement on enhanced Circle Line Wayfinding
-                    Designs. A few mockups were showcased and the public were allowed to choose options on their
-                    preference in the upcoming CCL6's wayfinding design enhancements. </p>
-                  </p>
-                </div>
-              </div>
-
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
-                <div class="column column-pic">
-                  <figcaption>
-                    <a href="img/ccl6-pre1.png" id="ccl6-pre1" class="portfolio-img ">
-                      <img src="img/ccl6-pre1.png" id="ccl6-pre2-img" class="img-fluid cp-img" alt="ccl6-pre1">
-                    </a>
-                  </figcaption>
-                </div>
-
-                <div class="column column-pic">
-                  <figcaption>
-                    <a href="img/ccl6-pre2.png" id="ccl6-pre2" class="portfolio-img ">
-                      <img src="img/ccl6-pre2.png" id="ccl6-pre2-img" class="img-fluid cp-img" alt="ccl6-pre2">
-                    </a>
-                  </figcaption>
-                </div>
-              </div>
-            </div>
-            <br>
-            <p style="text-align: left;">I myself have gone to the Engagement Session and have done the survey.
-              Below, I'll go through one by one on the elements they proposed, and a redesign of the proposed
-              version according to what I believe might have been a better idea. For me, there is no such thing as a
-              wrong idea, but it could be something that the LTA can explore in the future, before CCL6 commences
-              service in 2026. </p>
-            </p>
           </div>
 
-          <hr>
+          <ul>
+            <li>
+              <a href="eicw.html">Design System Introduction</a>
+            </li>
 
+            <li>
+              <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
+            </li>
+
+            <li>
+              <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
+            </li>
+
+            <li>
+              <a href="eicw-4.html">Proposed UI/UX Changes</a>
+            </li>
+
+            <li>
+              <a href="eicw-5.html" class="active">Rethinking CCL6 Signages</a>
+            </li>
+          </ul>
+
+          <div class="right-arrow active">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+            </svg>
+
+          </div>
         </div>
+        <hr>
       </div>
+
     </div>
+
   </section>
 
 
@@ -271,8 +311,8 @@
   </section>
 
 
-  <!-- Section 1 Header -->
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ent-img"
+  <!----- Section 1 Header ----->
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ent-img"
     style="background-image: url(img/ent-light.png)">
     <div class="container h-100" id="ent">
       <div class="row h-100 align-items-center">
@@ -285,7 +325,7 @@
   </section>
 
   <!-- Touch Point 1 - Digital Panel for Arrival Times -->
-  <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
+  <section class="about-me-summ clearfix" style="padding-top: 5em; padding-bottom: 3px;">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
         <div class="row justify-content-center">
@@ -342,8 +382,8 @@
     </div>
   </section>
 
-  <!-- Section 2 Header -->
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="conc-img"
+  <!----- Section 2 Header ----->
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="conc-img"
     style="background-image: url(img/conc-light.png)">
     <div class="container h-100" id="conc">
       <div class="row h-100 align-items-center">
@@ -356,7 +396,7 @@
   </section>
 
   <!-- Touch Point 2 - Wayfinding Signages  -->
-  <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
+  <section class="about-me-summ clearfix" style="padding-top: 5em; padding-bottom: 3px;;">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
         <div class="row justify-content-center">
@@ -415,8 +455,8 @@
     </div>
   </section>
 
-  <!-- Section 3 Header -->
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="plat-img"
+  <!----- Section 3 Header ----->
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="plat-img"
     style="background-image: url(img/plat-light.png)">
     <div class="container h-100" id="plat">
       <div class="row h-100 align-items-center">
@@ -429,7 +469,7 @@
   </section>
 
   <!-- Touch Point 3 - Arrival Times of the respective train services  -->
-  <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
+  <section class="about-me-summ clearfix" style="padding-top: 5em; padding-bottom: 3px;">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
         <div class="row justify-content-center">
@@ -900,7 +940,6 @@
     </div>
   </section>
 
-
   <!-- Enhancements Overview -->
   <section class="about-me-summ clearfix" style="padding-bottom: 7px; padding-top: 7px;">
     <div class="wbnrfz_details_body_tchp">
@@ -927,24 +966,27 @@
     </div>
   </section>
 
-
-  <footer class="footer-area">
-    <div class="container">
-      <div class="footer-content d-flex flex-column align-items-center text-center">
-        <!-- Social Links -->
-        <div class="social-info">
-          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-        </div>
-        <!-- Copywrite Text -->
-        <div class="copywrite-text">
-          <p>&copy;
-            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-          </p>
-        </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-social">
+        <a href="https://github.com/nurafianZulkifli" class="social-link">
+          <i class="fa-brands fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/nrfzlkf_" class="social-link">
+          <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
+          <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
+          <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+        </a>
       </div>
+    </div>
+
+    <div class="footer-copy">
+      © 2025 Nurafian Zulkifli
     </div>
   </footer>
 
