--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -38,160 +38,209 @@
 
 <body>
 
-  <!-- Preloader Section -->
-  <!-- <div id="preloader">
-    <div class="loader"></div>
-    <p id="preloader-text">Just a moment...</p>
-  </div> -->
+  <!-- Navigation Bar -->
+  <nav class="navbar-container">
+    <div class="navbar">
+      <!-- Logo -->
+      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+
+      <!-- Navigation Links -->
+      <ul class="navbar-nav" id="navbarNav">
+        <li class="nav-item">
+          <a href="../index.html" class="nav-link">
+            <i class="fa-solid fa-house"></i>
+            <span>Home</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="../about.html" class="nav-link">
+            <i class="fa-solid fa-circle-user"></i>
+            <span>About</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="../works-by-nrfz.html" class="nav-link">
+            <i class="fa-solid fa-pen-paintbrush"></i>
+            <span>Works By NRFZ</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link active">
+            <i class="fa-solid fa-map-location"></i>
+            <span>EICW</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="../blog.html" class="nav-link">
+            <i class="fa-solid fa-comment"></i>
+            <span>Blog</span>
+          </a>
+        </li>
+        <li class="nav-item-toggle">
+          <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
+          </a>
+        </li>
+      </ul>
+
+      <!-- Mobile Toggle -->
+      <button class="mobile-toggle" id="mobileToggle">
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </button>
+    </div>
+
+    </div>
+  </nav>
+
+  <!-- Mobile Menu Overlay -->
+  <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
+
+  <!-- Mobile Menu -->
+  <div class="mobile-menu" id="mobileMenu">
+    <div class="mobile-menu-header">
+      <a href="#" class="mobile-menu-brand">
+        <span class="brand-text">
+          <li class="mobile-menu-item mobile-theme-toggle">
+            <button class="wbnrfz_btn_theme mobile-theme-btn" id="dark-mode-toggle-mobile"
+              title="Toggle Dark/Light Mode!">
+              <i class="fa-solid fa-moon-stars" id="theme-icon-mobile"></i>
+            </button>
+          </li>
+        </span>
+      </a>
+      <button class="mobile-menu-close" id="mobileMenuClose">
+        <span>×</span>
+      </button>
+    </div>
+
+    <ul class="mobile-menu-nav">
+      <li class="mobile-menu-item">
+        <a href="../index.html" class="mobile-menu-link">
+          <i class="fa-solid fa-regular fa-house"></i>
+          <span>Home</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="../about.html" class="mobile-menu-link">
+          <i class="fa-solid fa-regular fa-circle-user"></i>
+          <span>About</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="../works-by-nrfz.html" class="mobile-menu-link">
+          <i class="fa-solid fa-pen-paintbrush"></i>
+          <span>Works By NRFZ</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="#" class="mobile-menu-link active">
+          <i class="fa-solid fa-map-location"></i>
+          <span>EICW</span>
+        </a>
+      </li>
+      <li class="mobile-menu-item">
+        <a href="../blog.html" class="mobile-menu-link">
+          <i class="fa-solid fa-comment"></i>
+          <span>Blog</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- Scroll Indicator -->
   <div id="scroll-indicator-container">
     <div id="scroll-indicator"></div>
   </div>
 
-  <header>
-    <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-    <input type="checkbox" id="check" />
-    <label for="check" class="icons">
-      <i class="fa-solid fa-bars" id="menu-icon"></i>
-      <i class="fa-solid fa-xmark" id="close-icon"></i>
-    </label>
+  <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
-    <nav class="navbar navbar-mobile">
-      <a href="../index.html" class="nav-item">Home</a>
-      <a href="../about.html" class="nav-item">About</a>
-      <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-      <a href="eicw.html" class="nav-item active">EICW</a>
-      <a href="../blog.html" class="nav-item">Blog</a>
-      <a href="#" class="nav-item">
-        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
-          <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
-        </button>
-      </a>
-    </nav>
-  </header>
-
-  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-eicw-4-light.png); height: 85vh;">
-    <div class="wbnrfz_details_blog">
-      <div class="container">
-        <div class="portfolio-controls d-flex justify-content-between align-items-center">
-          <!-- Filter Buttons -->
-          <div class="portfolio-filter mt-3">
-            <div class="col-lg-12">
-              <div class="main-title">
-                <nav aria-label="breadcrumb">
-                  <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
-                        Home</a>
-                    </li>
-                    <li class="breadcrumb-item active"><a href="eicw.html">
-                        EICW
-                      </a>
-                    </li>
-                  </ol>
-                </nav>
-                <h1 class="brc">Proposed UI/UX Changes</h1>
-              </div>
-            </div>
-          </div>
-          <!-- Collapsible Header -->
-          <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-            aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
-            <i class="fa-solid fa-chevron-down nav-chev"></i>
-          </div> -->
+  <!-- Cover Header -->
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cui-img">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
         </div>
-        <!-- Collapsible Content -->
-
       </div>
     </div>
   </section>
 
-  <!-- Section Content -->
-  <section class="about-me-summ clearfix">
-    <div class="wbnrfz_details_body">
-
-      <div class="scrollable-tabs-container">
-        <div class="left-arrow">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-          </svg>
-
-        </div>
-
-        <ul>
-          <li>
-            <a href="eicw.html">Design System Introduction</a>
-          </li>
-
-          <li>
-            <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
-          </li>
-
-          <li>
-            <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
-          </li>
-
-          <li>
-            <a href="eicw-4.html" class="active">Proposed UI/UX Changes</a>
-          </li>
-
-          <li>
-            <a href="eicw-5.html">Rethinking CCL6 Signages</a>
-          </li>
-        </ul>
-
-        <div class="right-arrow active">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-          </svg>
-
-        </div>
-      </div>
-
-      <div class="container container-mobile">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="row justify-content-center">
-
-              <!-- Preface -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="pcu">
-                <div class="info justify-content-center">
-                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed
-                    UI/UX
-                    Changes</h2>
-                  <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
-                    elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
-                    navigate and understand the information presented, regardless of their familiarity with the system.
-                    These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
-                    commuting experience.
-                  </p>
-                </div>
-              </div>
-              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
-                <a href="#bcr">
-                  <button class="btn">Bus Card Reader UI (LTA)</button>
-                </a>
-                <a href="#bat">
-                  <button class="btn">Bus Arrival Timings (LTA)</button>
-                </a>
-                <a href="#tv">
-                  <button class="btn">TrainVision (TEL)</button>
-                </a>
-                <a href="#staris2">
-                  <button class="btn">STARiS 2.0 (SMRT)</button>
-                </a>
-              </div>
+  <!-- Title/Breadcrumbs -->
+  <section class="about-me-sum clearfix">
+    <div class="wbnrfz_eicw">
+      <div class="page-header-section">
+        <div class="container-xxl container-mobile container-mobile-header">
+          <div class="breadcrumb-wrapper">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                  <a href="../index.html">
+                    <i class="fa-solid fa-house"></i>
+                  </a>
+                </li>
+                <li class="breadcrumb-item">
+                  <a href="eicw.html">EICW</a>
+                </li>
+              </ol>
+            </nav>
+            <div class="page-title-wrapper">
+              <h1 class="page-title-single">Proposed UI/UX Changes</h1>
+              <p class="page-subtitle">5 mins read</p>
             </div>
           </div>
         </div>
+
+        <div class="scrollable-tabs-container">
+          <div class="left-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+            </svg>
+
+          </div>
+
+          <ul>
+            <li>
+              <a href="eicw.html">Design System Introduction</a>
+            </li>
+
+            <li>
+              <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
+            </li>
+
+            <li>
+              <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
+            </li>
+
+            <li>
+              <a href="eicw-4.html" class="active">Proposed UI/UX Changes</a>
+            </li>
+
+            <li>
+              <a href="eicw-5.html">Rethinking CCL6 Signages</a>
+            </li>
+          </ul>
+
+          <div class="right-arrow active">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+            </svg>
+
+          </div>
+        </div>
+        <hr>
       </div>
+
     </div>
   </section>
 
   <!-- Section Header -->
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="cd-img"
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="cd-img"
     style="background-image: url(img/cdui-light.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
@@ -393,26 +442,27 @@
         </div>
   </section>
 
-
-
-
-  <footer class="footer-area">
-    <div class="container">
-      <div class="footer-content d-flex flex-column align-items-center text-center">
-        <!-- Social Links -->
-        <div class="social-info">
-          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-        </div>
-        <!-- Copywrite Text -->
-        <div class="copywrite-text">
-          <p>&copy;
-            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-          </p>
-        </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-social">
+        <a href="https://github.com/nurafianZulkifli" class="social-link">
+          <i class="fa-brands fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/nrfzlkf_" class="social-link">
+          <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
+          <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
+          <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+        </a>
       </div>
+    </div>
+
+    <div class="footer-copy">
+      © 2025 Nurafian Zulkifli
     </div>
   </footer>
 
