XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -260,7 +260,7 @@
         <div class="row justify-content-center">
 
           <!-- -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;">Wayfinding Signages
@@ -281,7 +281,7 @@
               </p>
             </div>
 
-            <div class="row wow fadeInUp" data-wow-delay="100ms">
+            <div class="row wow fadeIn" data-wow-delay="100ms">
               <div class="column column-pic">
                 <figcaption>
                   <a href="img/psr-1.jpg" id="psr1" class="portfolio-img ">
@@ -335,7 +335,7 @@
 
         <p>Let's take a look at the Interchange Name signages implemented at the Pasir Ris ITH.</p>
 
-        <div class="row wow fadeInUp" data-wow-delay="100ms">
+        <div class="row wow fadeIn" data-wow-delay="100ms">
           <div class="column column-pic">
             <figcaption>
               <a href="img/psr3.jpg" id="psr3" class="portfolio-img ">
@@ -358,7 +358,7 @@
           duplication of caplets (the yellow SG icon itself were used on the previous Design
           System, and the new Bus Icon were used on the new Design System) makes it look awkward.</p>
 
-        <div class="row wow fadeInUp" data-wow-delay="100ms">
+        <div class="row wow fadeIn" data-wow-delay="100ms">
           <div class="column column-pic">
             <figcaption>
               <a href="img/psr-3b-light.png" id="psr3b" class="portfolio-img ">
@@ -401,7 +401,7 @@
         <div class="row justify-content-center">
 
           <!-- -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h3 style="font-size: 30px; font-weight: bold; margin-top: 0em;"><i
@@ -418,7 +418,7 @@
               </p>
             </div>
 
-            <div class="row wow fadeInUp" data-wow-delay="100ms">
+            <div class="row wow fadeIn" data-wow-delay="100ms">
               <div class="column column-pic">
                 <figcaption>
                   <a href="img/cck-1.png" id="psr1" class="portfolio-img ">
@@ -478,7 +478,7 @@
             href="https://www.transportdesign.com/projects/singapore-connecting-a-city">TDC</a>. Hence, I will be
           switching over to the new design system, but using my changes.</p>
 
-        <div class="row wow fadeInUp" data-wow-delay="100ms">
+        <div class="row wow fadeIn" data-wow-delay="100ms">
           <div class="column column-pic">
             <figcaption>
               <a href="img/cck3.png" id="cck3" class="portfolio-img ">
@@ -522,7 +522,7 @@
         <div class="row justify-content-center">
 
           <!-- Bus Route Diagrams Signages -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold;">Bus Route Diagrams
