--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -248,7 +248,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <div class="info justify-content-center">
                                     <h2 style="font-size: 30px; font-weight:bold;">Additions & Alterations</h2>
                                     <p style="text-align: left;">For this section, I intend to introduce incremental
@@ -258,7 +258,7 @@
                                     </p>
                                 </div>
 
-                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
+                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn"
                                     data-wow-delay="100ms" style="padding-top: 1em;">
                                     <a href="#ci-img">
                                         <button class="btn">Changes & Improvements over...</button>
@@ -303,7 +303,7 @@
                 <div class="row justify-content-center">
 
                     <!-- Way Out Icon -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -356,7 +356,7 @@
                     </div>
 
                     <!-- Exit Icon -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -397,7 +397,7 @@
                     </div>
 
                     <!-- Lift Icon -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -456,7 +456,7 @@
                     </div>
 
                     <!-- Lift Directory Sign -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -501,7 +501,7 @@
                     </div>
 
                     <!-- Exit Directory Sign -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -574,7 +574,7 @@
 
 
                     <!-- Station Name Sign -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -620,7 +620,7 @@
 
 
                     <!-- Station Exit Sign -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -692,7 +692,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Train Timings -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Train
@@ -718,7 +718,7 @@
                             </div>
 
                             <!-- Lift Signages -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Lift Signages</h2>
@@ -752,7 +752,7 @@
                             </div>
 
                             <!-- Exit Directories -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Exit Directories</h2>
@@ -785,7 +785,7 @@
                             <hr>
 
                             <!-- Totem Signs -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Totem Signs</h2>
@@ -824,7 +824,7 @@
                             <hr>
 
                             <!-- Overhead Signs -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Overhead Signs</h2>
@@ -855,7 +855,7 @@
                             <hr>
 
                             <!-- Unused Designs -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Unused Designs</h2>
@@ -893,7 +893,7 @@
                 <div class="row justify-content-center">
 
                     <!-- Labels -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -945,7 +945,7 @@
                     </div>
 
                     <!-- Iconography -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -1026,7 +1026,7 @@
                     </div>
 
                     <!-- Station Names on Exit -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -1122,7 +1122,7 @@
                 <div class="row justify-content-center">
 
                     <!-- Exit Prominence -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -1170,7 +1170,7 @@
                     </div>
 
                     <!-- Modernizing Old Signages (1) -->
-                    <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                         <div class="details_info">
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -1225,7 +1225,7 @@
                         </div>
 
                         <!-- Modernizing Old Signages (2) -->
-                        <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                             <div class="details_info">
                                 <div class="row justify-content-center">
                                     <div class="col-lg-12">
@@ -1304,7 +1304,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Enhancements Overview -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: center;">
                                     Enhancements Overview</h2>
                                 <div class="banner-eicw">
