--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -15,7 +15,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
   <link rel='stylesheet' href='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.css'>
 
   <link rel="stylesheet" href="../css/style.css">
@@ -260,7 +260,7 @@
         <div class="row justify-content-center">
 
           <!-- Bus Card Reader UI (LTA) -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bcr">Bus Card
@@ -319,7 +319,7 @@
           <hr>
 
           <!-- Bus Arrival Timings (LTA) -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bat">Bus Arrival
@@ -340,7 +340,7 @@
           <hr>
 
           <!-- TrainVision (TEL) -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="tv">TrainVision
@@ -361,7 +361,7 @@
           <hr>
 
           <!-- STARiS 2.0 (SMRT) -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="staris2">STARiS
