--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -15,7 +15,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
   <link rel='stylesheet' href='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.css'>
 
   <link rel="stylesheet" href="../css/style.css">
@@ -250,7 +250,7 @@
             <div class="row justify-content-center">
 
               <!-- CCL6 -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">What's CCL6
                     and why does it concern me?</h2>
@@ -273,11 +273,11 @@
               </div>
 
             </div>
-            <p class="wow fadeInUp" data-wow-delay="100ms" style="text-align: center;">I will showcase my redesigns in
+            <p class="wow fadeIn" data-wow-delay="100ms" style="text-align: center;">I will showcase my redesigns in
               different parts, as follows:
             </p>
 
-            <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms"
+            <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms"
               style="padding-bottom: 2em;">
               <a href="#ent">
                 <button class="btn">Section 1 : Entrance Level</button>
@@ -295,7 +295,7 @@
               changed to 'via'. Also note that the Train Load Indicator is not confirmed to be implemented, but my
               designs have made that a consideration as well.</p>
 
-            <div class="row wow fadeInUp" data-wow-delay="100ms">
+            <div class="row wow fadeIn" data-wow-delay="100ms">
               <div class="column column-pic">
                 <figcaption>
                   <a href="img/arrow-light.png" id="arrow" class="portfolio-img ">
@@ -331,7 +331,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h5>The proposed design follows the same design principles as Thomson East
                     Coast Line (TEL) and other newer lines, mainly:</h5>
@@ -357,7 +357,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-6.png" id="dpp" class="portfolio-img ">
@@ -402,7 +402,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h5>The proposed design follows the same design principles as Thomson East
                     Coast Line (TEL) and other newer lines, mainly:</h5>
@@ -430,7 +430,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-7.png" id="wfp" class="portfolio-img ">
@@ -475,7 +475,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h5>The proposed design follows the same design principles as Thomson East
                     Coast Line (TEL) and other newer lines, mainly:</h5>
@@ -503,7 +503,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-3.png" id="os" class="portfolio-img ">
@@ -537,7 +537,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch
                     Point
@@ -571,7 +571,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-8.png" id="wfpp" class="portfolio-img ">
@@ -605,7 +605,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch Point
                     5A - Route Diagrams</h2>
@@ -640,7 +640,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-9.png" id="pdp" class="portfolio-img ">
@@ -674,7 +674,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch Point
                     5B - Transfer Icon</h2>
@@ -702,7 +702,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-10.png" id="tfp" class="portfolio-img ">
@@ -736,7 +736,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch Point
                     6 - Platform Screen Doors Wayfinding</h2>
@@ -772,7 +772,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-11.png" id="tfp" class="portfolio-img ">
@@ -806,7 +806,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch Point
                     7A - Waiting Page </h2>
@@ -814,7 +814,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-1.png" id="os" class="portfolio-img ">
@@ -863,7 +863,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch Point
                     7B - Arrival Page for Non-Loop Service </h2>
@@ -871,7 +871,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-4.png" id="os" class="portfolio-img ">
@@ -905,7 +905,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 25px; font-weight:bold; text-align: left;">Touch Point
                     7C - Arrival Page for Loop Service </h2>
@@ -913,7 +913,7 @@
                 </div>
               </div>
 
-              <div class="row wow fadeInUp" data-wow-delay="100ms">
+              <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2.png" id="os" class="portfolio-img ">
@@ -948,7 +948,7 @@
           <div class="col-lg-12">
             <div class="row justify-content-center">
 
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <h2 class="mb-3 text-center"
                   style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 7px;">
                   Enhancements Overview</h2>
