--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -249,7 +249,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="dsi">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi">
                                 <div class="info justify-content-center">
                                     <h2 style="font-size: 30px; font-weight:bold;">Design
                                         System Introduction</h2>
@@ -264,7 +264,7 @@
                                 </div>
 
                                 <!-- Evolution of our Transit System Design -->
-                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                                <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                     <div class="banner-eicw">
                                         <a href="img/evo-light.png" id="evo" class="portfolio-img">
                                             <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo">
@@ -292,7 +292,7 @@
                                 </p>
                                 </p>
 
-                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
+                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn"
                                     data-wow-delay="100ms" style="padding-top: 1em;">
                                     <a href="#typeface">
                                         <button class="btn">Font Typeface</button>
@@ -308,7 +308,7 @@
                             </div>
 
                             <!-- Font Typeface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="typeface">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Font
@@ -322,7 +322,7 @@
                             </div>
 
                             <!-- Colour Palettes -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="colour">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Colour
@@ -369,7 +369,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Exit Signs -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Exit
@@ -383,7 +383,7 @@
                             </div>
 
                             <!-- Line/Station/Network Caplets -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Line/Station/Network Caplets</h2>
@@ -395,7 +395,7 @@
                             </div>
 
                             <!-- Lift Signs -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Lift Signs</h2>
@@ -407,7 +407,7 @@
                             </div>
 
                             <!-- Wayfinding Signs -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Wayfinding Signs</h2>
