XXXX-XX Feature Update for Version Next (6.0.0)
Milestone 2

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -471,6 +471,8 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
+  <script src="../js/navtabs.js"></script>
+
   <script src="js/eicw-4.js"></script>
 
   <script src="../js/jquery.min.js"></script>
@@ -486,8 +488,6 @@
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
-
-  <!--  <script src="../js/preloader.js"></script> -->
 
 </body>
 
