--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -240,7 +240,6 @@
 
   </section>
 
-
   <!-- Background -->
   <section class="about-me-summ clearfix" style="padding-bottom: 30px;">
     <div class="wbnrfz_eicw">
@@ -995,6 +994,8 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
+  <script src="../js/navtabs.js"></script>
+
   <script src="js/eicw-5.js"></script>
 
   <script src="../js/jquery.min.js"></script>
@@ -1010,8 +1011,6 @@
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
-
-  <!--  <script src="../js/preloader.js"></script> -->
 
 </body>
 
