XXXX-XX Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Train Delays Tracker | WBN</title>
+  <title>Experimenting Improvements of Current Wayfinding | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -288,7 +288,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;">A microsite page in my Personal Website where I
+                  <p style="text-align: left;">A microsite page in my Personal Website where I
                     explored different
                     ways and ideas to make the current Wayfinding system better. These includes the changes and
                     improvements, as well as some original ideas of my own. First conceptualized as a Handbook.</p>
@@ -296,28 +296,30 @@
               </div>
             </div>
           </div>
-
-          <div class="wrapper">
-            <div class="wrapper">
-              <i id="left" class="fa-solid fa-angle-left" style="display: none;"></i>
-              <div class="carousel">
-                <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img" data-gallery="carousel">
-                  <img class="img-fluid" src="https://i.imgur.com/sBOOEqY.png" alt="img" draggable="false">
-                </a>
-                <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img" data-gallery="carousel">
-                  <img class="img-fluid" src="https://i.imgur.com/W3vPlwI.png" alt="img" draggable="false">
-                </a>
-                <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img" data-gallery="carousel">
-                  <img class="img-fluid" src="https://i.imgur.com/94YwAP9.png" alt="img" draggable="false">
-                </a>
-              </div>
-              <i id="right" class="fa-solid fa-angle-right" style="display: none;"></i>
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </section>
+
+  <div class="wrapper">
+    <div class="carousel" id="delays-carousel">
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/sBOOEqY.png" alt="img" draggable="false">
+        </a>
+      </div>
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/W3vPlwI.png" alt="img" draggable="false">
+        </a>
+      </div>
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/94YwAP9.png" alt="img" draggable="false">
+        </a>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="footer">
