--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -236,7 +236,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <!-- Summary -->
-            <div class="container container-xxl">
+            <div class="container container-xxl container-mobile">
               <div class="row">
 
                 <div class="col-md-6 col-lg-4 box-indiv">
@@ -286,7 +286,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: left; padding-bottom: 2em;">A pet-project of mine. Created just to keep
+                  <p style="text-align: left;">A pet-project of mine. Created just to keep
                     track of
                     train delays and breakdowns. The current features only included an Overview of Days Since Last
                     Reported
@@ -297,28 +297,35 @@
               </div>
             </div>
           </div>
-
-
-          <div class="wrapper">
-            <i id="left" class="fa-solid fa-angle-left" style="display: none;"></i>
-            <div class="carousel">
-              <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel">
-                <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="img" draggable="false">
-              </a>
-              <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel">
-                <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="img" draggable="false">
-              </a>
-              <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
-                <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
-              </a>
-            </div>
-            <i id="right" class="fa-solid fa-angle-right" style="display: none;"></i>
-          </div>
-
         </div>
       </div>
     </div>
   </section>
+
+  <div class="wrapper">
+    <div class="carousel" id="delays-carousel">
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="img" draggable="false">
+        </a>
+      </div>
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="img" draggable="false">
+        </a>
+      </div>
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
+        </a>
+      </div>
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
+          <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
+        </a>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="footer">
