XXXX-XX Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -283,7 +283,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: left;">A pet-project of mine. Created just to keep
+                  <p style="text-align: justify;">A pet-project of mine. Created just to keep
                     track of
                     train delays and breakdowns. The current features only included an Overview of Days Since Last
                     Reported
