--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -235,7 +235,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <!-- Summary -->
-            <div class="container container-xxl">
+            <div class="container container-xxl container-mobile">
               <div class="row">
 
                 <div class="col-md-6 col-lg-4 box-indiv">
@@ -285,7 +285,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: left;">A microsite page in my Personal Website where I
+                  <p style="text-align: justify;">A microsite page in my Personal Website where I
                     explored different
                     ways and ideas to make the current Wayfinding system better. These includes the changes and
                     improvements, as well as some original ideas of my own. First conceptualized as a Handbook.</p>
