--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -249,7 +249,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
-                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi" style="padding-top: 10px;">
                                 <div class="info justify-content-center">
                                     <h2 style="font-size: 30px; font-weight:bold;">Design
                                         System Introduction</h2>
