--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -294,32 +294,29 @@
               </div>
             </div>
           </div>
-          
+
         </div>
       </div>
     </div>
   </section>
 
   <div class="wrapper">
+    <div class="carousel-gradient carousel-gradient-left"></div>
+    <div class="carousel-gradient carousel-gradient-right"></div>
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel">
-          <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="img" draggable="false">
+        <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
+          <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="tdt1-img" draggable="false" id="tdt1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel">
-          <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="img" draggable="false">
+        <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
+          <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="tdt2-img" draggable="false" id="tdt2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
-          <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
-        </a>
-      </div>
-      <div class="carousel-cell">
-        <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
-          <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
+        <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
+          <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="tdt3-img" draggable="false" id="tdt3-img">
         </a>
       </div>
     </div>
@@ -366,17 +363,11 @@
 
   <script src="../js/swiper-bundle.min.js"></script>
 
-  <script src="../js/portfolio-img.min.js"></script>
-
   <script src="../js/isotope.pkgd.min.js"></script>
-
-  <script src="../js/portfolio-comp.js"></script>
 
   <script src="../js/copy-to-clipboard.js"></script>
 
   <script src='//cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js'></script>
-
-  <script src="../js/portfolio-img.min.js"></script>
 
   <script src="../js/dis.js"></script>
 
@@ -391,6 +382,7 @@
     if (localStorage.getItem('dark-mode') === 'enabled') {
       document.body.classList.add('dark-mode');
       updateThemeIcon('dark');
+      updateHrefForDarkMode();
     } else {
       updateThemeIcon('light');
     }
@@ -410,6 +402,7 @@
         localStorage.setItem('dark-mode', 'disabled');
         updateThemeIcon('light');
       }
+      updateHrefForDarkMode();
     }
 
     // Add event listeners to both buttons if they exist
