XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -249,7 +249,8 @@
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
-                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi" style="padding-top: 10px;">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi"
+                                style="padding-top: 10px;">
                                 <div class="info justify-content-center">
                                     <h2 style="font-size: 30px; font-weight:bold;">Design
                                         System Introduction</h2>
@@ -347,13 +348,13 @@
     </section>
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section parallax" id="eia-img"
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="eia-img"
         style="background-image: url(img/eia-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Existing Icon Assets</h2>
+                        <!-- <h2 class="page-title">Existing Icon Assets</h2> -->
                     </div>
                 </div>
             </div>
@@ -367,6 +368,13 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
+
+                            <div class="info justify-content-center" style="padding-top: 3em;">
+                                <h2 style="font-size: 30px; font-weight:bold;">Existing Icon Assets</h2>
+                                <p style="text-align: left;">This section will showcase the existing icon assets
+                                    currently in use, categorised into different sections.
+                                </p>
+                            </div>
 
                             <!-- Exit Signs -->
                             <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
